Added CustomeSuccessHandler, a new field in UserAddressEntity, and added feature to fill ngo_regi registration.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -49,7 +49,7 @@
 
             <p class="register-link">
                 Don't have an account?
-                <a href="signup.html">Create one</a>
+                <a href="type.html">Create one</a>
             </p>
         </div>
     </div>
